@@ -4,6 +4,7 @@ use strict;
 use warnings;
 
 use Test::More;
+use Test::NoWarnings;
 use Test::Deep;
 use Test::Exception;
 
@@ -16,7 +17,7 @@ use Net::WebSocket::Frame::text ();
 use Net::WebSocket::Parser              ();
 use Net::WebSocket::Endpoint::Server    ();
 
-plan tests => 2;
+plan tests => 1 + 2;
 
 #----------------------------------------------------------------------
 
