@@ -8,6 +8,7 @@ BEGIN {
 }
 
 use Test::More;
+use Test::NoWarnings;
 use Test::Deep;
 
 use File::Slurp;
@@ -15,7 +16,7 @@ use File::Temp;
 
 use IO::Framed ();
 
-plan tests => 6;
+plan tests => 1 + 6;
 
 use Net::WebSocket::Endpoint::Server ();
 use Net::WebSocket::Parser ();
