@@ -5,8 +5,9 @@ use warnings;
 use autodie;
 
 use Test::More;
+use Test::NoWarnings;
 
-plan tests => 1;
+plan tests => 1 + 1;
 
 use File::Temp;
 
